<resources>
    <string name="app_name" translatable="false">Light Tiles</string>
    <string name="app_developer" translatable="false">Cloudy Day Apps</string>
    <string name="settings">Settings</string>
    <string name="general">App</string>
    <string name="forget_bridge">Forget Bridge</string>
    <string name="forget_bridge_summary">Disconnect from the current Hue Bridge. This will reset any current tiles.</string>
    <string name="root">Root</string>
    <string name="auto_add_tiles">Auto add tiles</string>
    <string name="auto_add_tiles_summary">Immediately add tiles to the quick settings panel when I create them.</string>
    <string name="auto_remove_tiles">Auto remove tiles</string>
    <string name="auto_remove_tiles_summary">Immediately remove tiles from the quick settings panel when I delete them.</string>
    <string name="about">About</string>
    <string name="open_source_software">Open source software</string>
    <string name="app_version">Version: %s</string>
    <string name="required">Required</string>
    <string name="done">Done</string>
    <string name="tile">Tile</string>
    <string name="tiles">Tiles</string>
    <string name="light">Light</string>
    <string name="lights">Lights</string>
    <string name="light_tile">Light Tile</string>
    <string name="icon_and_label">Icon &amp; Label</string>
    <string name="tile_enabled">Tile enabled</string>
    <string name="tile_disabled">Tile disabled</string>
    <string name="cant_create_tile">Can\'t create tile</string>
    <string name="cant_delete_tile">Can\'t delete tile</string>
    <string name="bridge_not_found">Bridge not found</string>
    <string name="bridge_not_connected">Bridge not connected</string>
    <string name="bridge_not_responding">Bridge not responding</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="operation_timed_out">Operation timed out</string>
    <string name="connect_manually">Connect manually</string>
    <string name="bridge_ip_address">Bridge IP address</string>
    <string name="invalid_ip_address">Invalid IP address</string>
    <string name="tile_not_initialized">Tile not initialized</string>
    <string name="confirm_initialize_tile_now">Would you like to initialize this tile now?</string>
    <string name="confirm_delete_light_tile">Delete light tile?</string>
    <string name="confirm_forget_bridge">Forget the current Hue Bridge?</string>
    <string name="confirm_connect_bridge_now">Would you like to connect a Hue Bridge now?</string>
    <string name="searching_on_the_current_network">Searching for Hue Bridges\non the current network</string>
    <string name="no_lights_selected">No lights selected</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="tile_deleted">Tile deleted</string>
    <string name="tile_deleted_message">Light Tiles can automatically remove deleted tiles from the quick settings panel for rooted users. Would you like to remove the tile now?</string>

    <string name="slide_welcome_blurb">Create custom quick setting tiles to control your Hue lights.</string>
    <string name="slide_add_to_qs_title">Add to Quick Settings</string>
    <string name="slide_add_to_qs_blurb">Tiles can be dragged into quick settings after creation.</string>
    <string name="slide_select_bridge_title">Locate a Hue Bridge</string>
    <string name="slide_select_bridge_blurb">You must be on the same network as your Hue Bridge.</string>
    <string name="slide_select_bridge_toast">Please select a Hue Bridge</string>
    <string name="slide_link_bridge_title">Link your Hue Bridge</string>
    <string name="slide_link_bridge_blurb">Press the button on the top of your Hue Bridge.</string>
    <string name="slide_link_bridge_toast">Press the button on your Hue Bridge</string>
    <string name="slide_ready_title">Ready to go!</string>
    <string name="slide_ready_blurb">Press done to start creating custom light tiles</string>

    <string name="spotlight_create_light_tile">Create up to 12 custom light tiles.</string>
    <string name="spotlight_delete_light_tile">Long clicking a tile will delete it.</string>

    <string name="tile_1">Tile 1</string>
    <string name="tile_2">Tile 2</string>
    <string name="tile_3">Tile 3</string>
    <string name="tile_4">Tile 4</string>
    <string name="tile_5">Tile 5</string>
    <string name="tile_6">Tile 6</string>
    <string name="tile_7">Tile 7</string>
    <string name="tile_8">Tile 8</string>
    <string name="tile_9">Tile 9</string>
    <string name="tile_10">Tile 10</string>
    <string name="tile_11">Tile 11</string>
    <string name="tile_12">Tile 12</string>

    <string name="licenses_dialog_css" translatable="false"><![CDATA[
        body { overflow-wrap: break-word; background-color: #282828; color: white; }
        li { font-size: 1.0em; padding: 5px, 5px, 10px, 5px; }
        a { font-size: 0.8em; color: #a61244; }\n
        pre { font-family: monospace; font-size: 0.8em; background-color: rgba(0,0,0,0.2); padding: 1em; white-space: pre-wrap; }
    ]]></string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2366012679301774/2502833449</string>
</resources>
